--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "request-promise-native": "^1.0.5",
         "website-scraper": "^3.3.6",
         "talkback": "^1.6.0",
-        "http-proxy": "^1.17.0"
+        "http-proxy": "^1.17.0",
+        "typy": "^2.0.1"
     },
     "author": "",
     "license": "ISC"
