--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "website-scraper": "^3.3.6",
         "talkback": "^1.6.0",
         "http-proxy": "^1.17.0",
-        "typy": "^2.0.1"
+        "http-proxy-rules": "^1.1.3"
     },
     "author": "",
     "license": "ISC"
